:bug: Check SVG not showing on mobile
* Switched to FAS instead of SVG

--- a/src/styles/_object.icon.scss
+++ b/src/styles/_object.icon.scss
@@ -425,6 +425,11 @@ section .invalid:first-of-type {
 		align-self: flex-end;
 		height: 100%;
 		width: 7%;
+
+		& .fa-check {
+			color: $color-pink-1;
+			font-size: 1.25rem;
+		}
 	}
 }
 
